--- a/index.html
+++ b/index.html
@@ -32,37 +32,43 @@
 </div>
 <!--Services Icons-->
 <div class="services">
-  <div class="container">
-
-    <div class="tile">
-      <div class="icon">
-        <div class="text">
-          <span>Test 1</span>
-        </div>
+      <div class="service">
+          <img src="resources/images/paper-icon.png" class="paper-icon"> </br>
+          <div>Comprehensive Exams</div>
       </div>
-    </div>
-
-    <div class="tile">
-      <div class="icon">
-        <div class="text">
-          <span>Test 2</span>
-        </div>
+      <div class="service">
+          <img src="resources/images/ruler-icon.png" class="ruler-icon"> </br>
+          <div>Custom Filings</div>
       </div>
-    </div>
-
-    <div class="tile">
-      <div class="icon">
-        <div class="text">
-          <span>Test 3</span>
-        </div>
+      <div class="service">
+          <img src="resources/images/truck-icon.png" class="truck-icon"> </br>
+          <div>Fast Delivery</div>
       </div>
-    </div>
-
-  </div>
 </div>
 
 <!--About Text-->
-<div></div>
+<div class="about">
+  <div class="container">
+    <div class="about-child">
+      <div class="about-title"><span>PHILOSOPHY</span></div>
+      <div class="about-text"><p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision that makes ours.</p></div>
+    </div>
+    <div class="about-child">
+      <div class="about-title"><span>APPOINTMENTS</span></div>
+      <div class="about-text"><p>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</p></div>
+    </div>
+  </div>
+</div>
+
+<footer>
+  <div class="container">
+    <div class="footer-logo">
+      <img src="resources/images/logo-black.png">
+      <span>Copywrite TortoiseShell Optics</span>
+    </div>
+  </div>
+</footer>
+  <!-- Content that fits over header image should also go here -->
 
   </body>
 
